# Staple

./: .classpath  .gitignore  .project  .travis.yml  CMakeLists.txt  LICENSE.txt  Makefile  Makefile.am  README  README.md  README.txt  astyle.cfg  build.gradle  build.xml  configure.ac  easybake.mk  settings.gradle  test.stp  test2.stp
compiler/: .gitignore  ArrayType.java  BaseScope.java  BuiltInTypeSymbol.java  C.g  C.stg  CC.java  CErrorNode.java  CMakeLists.txt  CString.java  CTree.java  ClassSymbol.java  ClassType.java  DefRef.g  DefRef.java  ErrorStream.java  FunctionSymbol.java  Gen.g  GlobalScope.java  LocalScope.java  Makefile  Makefile.am  Scope.java  Staple.g  Symbol.java  SymbolTable.java  Type.java  VariableSymbol.java  build.gradle  easybake.mk  llvm.stg  makefile.gcj  pom.xml
compiler/gradle/: idea.gradle
compiler/src/: CompilerContext.cpp  CompilerContext.h  FileUtils.cpp  FileUtils.h  ILGenerator.cpp  ILGenerator.h  Node.cpp  Node.h  ParserContext.h  Sempass.cpp  Sempass.h  Sempass1.cpp  Sempass2.cpp  Type.cpp  Type.h  Utils.cpp  Utils.h  VarCollector.cpp  VarCollector.h  codegen.cpp  codegen.h  compilercontext.cpp  compilercontext.h  importpass.cpp  importpass.h  main.cpp  node.h  optionparser.h  parser.y  parsercontext.h  scope.h  sempass.cpp  sempass.h  staple_lex.l  staple_parser.y  stdafx.h  stringutils.cpp  stringutils.h  tokens.l  type.cpp  (+2 more)
compiler/src/codegen/: LLVMCodeGenerator.cpp  LLVMCodeGenerator.h  LLVMStapleObject.cpp  LLVMStapleObject.h  objecthelper.hpp  pointerscopepass.cpp  pointerscopepass.h
compiler/src/main/antlr/: Staple.g4
compiler/src/main/java/com/devsmart/common/: StringUtils.java
compiler/src/main/java/com/devsmart/staple/: ASTVisitor.java  CCodeGen.java  ClassMemberDeRef.java  ClassStructVisitor.java  Code.java  CodeGenerator.java  CompileContext.java  Compiler.java  CompilerContext.java  DeRefHelper.java  ErrorStream.java  IRVisitor.java  InsertPhi.java  Namespace.java  ObjectAccessVisitor.java  Scope.java  SemPass1.java  SemPass1Listener.java  SemPass2.java  Staple.g4  StringLiteralVisitor.java  StructVisitor.java  Symbol.java  TypeVisitor.java  llvm.stg
compiler/src/main/java/com/devsmart/staple/AST/: ASTNode.java  ArrayAccess.java  Assignment.java  Block.java  Class.java  ClassDecl.java  ClassFunction.java  ClassMember.java  ForStatement.java  FunctionCall.java  IfStatement.java  IntLiteral.java  LocalVarDecl.java  MathOp.java  MemberAccess.java  MemberFunctionCall.java  Relation.java  Return.java  SymbolRef.java  TypeNode.java  VarDecl.java
compiler/src/main/java/com/devsmart/staple/ccodegen/: CCodeGen.java  ClassCCodeGen.java  ClassHeaderGen.java  ExpressionTransform.java
compiler/src/main/java/com/devsmart/staple/instructions/: AddInstruction.java  AllocVariableInstruction.java  ArgsRenderer.java  BitAndInstruction.java  BitOrInstruction.java  BitXorInstruction.java  BitcastInstruction.java  BranchInstruction.java  ClassStructDeclareInstruction.java  DivideInstruction.java  ExternalFunctionInstruction.java  ExtractValueInstruction.java  FunctionCallInstruction.java  FunctionDeclareInstruction.java  GetPointerInstruction.java  Instruction.java  IntLiteral.java  IntegerCompareInstruction.java  InvokeFunctionInstruction.java  JumpInstruction.java  LabelFactory.java  LabelInstruction.java  LoadInstruction.java  Location.java  LocationFactory.java  MemoryAddress.java  MultiplyInstruction.java  Operand.java  OperandRenderer.java  PhiInstruction.java  Register.java  RenderHelper.java  ReturnInstruction.java  SelectInstruction.java  StoreInstruction.java  StringLiteralDeclareInstruction.java  StructDeclarationInstruction.java  SubtractInstruction.java  SymbolReference.java  TempLocation.java  (+1 more)
compiler/src/main/java/com/devsmart/staple/ir/: AssignmentInst.java  BasicBlock.java  Branch.java  Call.java  CodeEmitter.java  Compare.java  Dominators.java  FunctionCallInst.java  FunctionDeclaration.java  GetPointerInst.java  IRRenderer.java  InsertPhi.java  IntLiteralOperand.java  JumpTo.java  Label.java  LoadInst.java  MathOpInst.java  Operand.java  PhiInst.java  ReturnInst.java  SSAInst.java  StackAllocInst.java  StoreInst.java  Var.java
compiler/src/main/java/com/devsmart/staple/runtime/: Runtime.java
compiler/src/main/java/com/devsmart/staple/symbol/: ClassSymbol.java  FunctionSymbol.java  MemberFunctionSymbol.java  MemberSymbol.java  Symbol.java
compiler/src/main/java/com/devsmart/staple/symbols/: AbstractSymbol.java  Argument.java  BlockSymbol.java  ClassSymbol.java  Field.java  FunctionSymbol.java  LocalVarableSymbol.java  LocalVariable.java  MemberVarableSymbol.java  MultiVarableSymbol.java  StapleSymbol.java  StringLiteralSymbol.java  StructSymbol.java  Variable.java
compiler/src/main/java/com/devsmart/staple/type/: ArrayType.java  BoolType.java  ClassType.java  Field.java  FloatType.java  FunctionType.java  IntType.java  MemberFunctionType.java  PointerType.java  PrimitiveType.java  StructType.java  Type.java  VoidType.java
compiler/src/main/resources/com/devsmart/staple/: C.stg  llvm.stg
compiler/src/sempass/: Pass1ClassVisitor.h  sempass.cpp  sempass.h  typevisitor.cpp  typevisitor.h
compiler/src/test/: linkedlist.stp
compiler/src/test/java/com/devsmart/staple/: CompilerTest.java  DominanceTest.java  IRTest.java  ObjOutputTest.java  ParserTest.java  SemTest.java  classtest.stp  test1.stp  testoperators.stp
compiler/src/test/resources/com/devsmart/staple/: dominancetest.stp  fibonacci.stp  semtest1.stp  test1.stp
compiler/src/types/: stapletype.cpp  stapletype.h
compiler/tests/: utils_tests.cpp
cstdlib/: stdio.stp  (+1 more)
runtime/: Makefile  Makefile.am  README.md  Staple.mk  alloc.stp  easybake.mk  gc.c  gc.h  main.c  object.stp  staple.h  string.stp  test.c  test.stp
runtime/include/: stapleruntime.h  stdc.h
runtime/include/staple/: object.h  staple.h  type.h
runtime/src/: cstdlib.stp  object.c  object.stp  runtime.ll  string.stp
runtime/src/stp/org/stp/: String.stp
runtime/src/stp/org/stp/io/: File.stp
runtime/tests/: assert.h  test_gc.c
runtime/utils/: linkedlist.c  linkedlist.h
(+85 files in other folders)
